grammar.js
    translation_unit: $ => repeat($._context),

    _context: $ => choice(
      $.compound_statement,
      $.function_definition,
      $.object_definition,
      $._empty_declaration,
      $.type_definition,
      alias($.preproc_if_in_top_level, $.preproc_if),
      alias($.preproc_ifdef_in_top_level, $.preproc_ifdef),
      $.preproc_include,
      $.preproc_using,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
    ),

    _block_item: $ => choice(
      $.statement,
      $._empty_declaration,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
    ),

    // Preprocesser

    object_definition: $ =>  seq(
      optional(field('storage_class_specifier', $.storage_class_specifier)),
      field('type', $._class_definition),
      commaSep1(field('declarator', choice($._declarator, $.init_declarator))),
      ';',
    ),

    _class_definition: $ => choice(
      seq(
        optional(field('class_modifier', $.class_modifier)),
        $._class_name,
      ),
      $._gtop_class,
      $._gins_class,
      $.class_specifier,
      $.union_specifier,
      $.struct_specifier,
      $.enum_specifier,
    ),

    storage_class_specifier: $ => repeat1(choice(
      'static',
      'auto',
      'register',
      'const',
      'extern',
      'global',
      'universal',
      'private',
      'protected',
      'public',
      'virtual',
    )),

    init_declarator: $ => choice(
      seq(
        field('declarator', $._declarator),
        '=',
        field('value', choice($.initializer_list, $.expression)),
      ),
      seq(field('declarator', $._declarator),
       '(', commaSep1($.expression), ')',),
    ),

    _declarator: $ => choice(
      $._direct_declarator,
      $.pointer_declarator,
      $.array_declarator,
      $.function_declarator,
      $.parenthesized_declarator,
    ),

    pointer_declarator: $ => prec.dynamic(1, prec.right(seq(
      choice('*', '&'),
      field('declarator', $._declarator),
    ))),

    function_declarator: $ => prec.right(1, seq(
      field('declarator', $._declarator),
      field('parameters', $.parameter_list),
    )),

    parenthesized_declarator: $ => prec(PREC.PAREN_DECLARATOR, seq(
      '(',
      field('declarator', $._declarator),
      ')',
    )),

    abstruct_pointer_declarator: $ => prec.dynamic(1, prec.right(seq(
      choice('*', '&'),
      optional(field('declarator', $.abstruct_declarator)),
    ))),

    abstruct_function_declarator: $ => prec(1, seq(
      optional(field('declarator', $.abstruct_declarator)),
      field('parameters', $.parameter_list),
    )),

    parameter_list: $ => seq(
      '(',
      optional(choice(
        seq(
          commaSep1($.parameter_declaration),
          optional(','),
          optional('...'),
        ),
        '...',
      )),
      ')',
    ),

    // Preserve unnamed parameter types instead of constructor-style arguments.
    // Keep the preference here so empty declarators retain macro error recovery.
    parameter_declaration: $ => prec.dynamic(2, choice(
      seq(
        optional(field('storage_class', 'const')),
        field('type', $._class_definition),
        optional(field('declarator', choice($._declarator, $.init_declarator)))
      ),
      seq(
        optional('const'),
        field('type', $._class_definition),
        optional(field('declarator', $.abstruct_declarator))
      ),
    )),

    initializer_list: $ => choice(
      seq('{', commaSep(choice($.initializer_list, $.expression)), '}'),
    ),

    operator_declarator: $ => seq(
      'operator',
      field('operator', choice(
        '+',
        '-',
        '*',
        '/',
        '%',
        '<<',
        '>>',
        '&',
        '|',
        '^',
        '==',
        '!=',
        '>',
        '<',
        '>=',
        '<=',
        '!',
        '~',
        '++',
        '--',
        '=',
        '.*',
        '->*',
        '+=',
        '-=',
        '*=',
        '/=',
        '%=',
        '<<=',
        '>>=',
        '&=',
        '|=',
        '^=',
        seq('[', ']'),
        seq('(', ')'),
      )),
    ),

    function_definition: $ => seq(
      optional(field('storage_class_specifier', $.storage_class_specifier)),
      optional(field('type', $._class_definition)),
      field('declarator', $._declarator),
      field('body', $.compound_statement),
    ),

    compound_statement: $ => seq(
      '{',
      repeat($._block_item),
      '}',
    ),

    struct_specifier: $ => seq(
      'struct',
      $._class_declaration,
    ),

    _class_declaration: $ => prec.right(seq(
      choice(
        field('name', $._class_name),
        seq(
          optional(field('name', $._class_name)),
          optional($.base_class_clause),
          field('body', $.field_declaration_list),
        ),
      ),
    )),

    expression_statement: $ => seq(
      optional(choice(
        $.expression,
        $.comma_expression,
      )),
      ';',
    ),

    comma_expression: $ => seq(
      field('left', $.expression),
      ',',
      field('right', choice($.expression, $.comma_expression)),
    ),

    _assignment_left_expression: $ => choice(
      $.identifier,
      // Assignability is a semantic property, including for literal targets.
      $.primary,
      $.call_expression,
      $.field_expression,
      $.pointer_expression,
      $.subscript_expression,
      $.parenthesized_expression,
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._assignment_left_expression),
      field('operator', choice(
        '=',
        '*=',
        '/=',
        '%=',
        '+=',
        '-=',
        '<<=',
        '>>=',
        '&=',
        '^=',
        '|=',
      )),
      field('right', $.expression),
    )),

    pointer_expression: $ => prec.left(PREC.CAST, seq(
      field('operator', choice('*', '&')),
      field('argument', $.expression),
    )),

    unary_expression: $ => prec.left(PREC.UNARY, seq(
      field('operator', choice('!', '~', '-', '+')),
      field('argument', $.expression),
    )),

    binary_expression: $ => {
      const table = [
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['|', PREC.INCLUSIVE_OR],
        ['^', PREC.EXCLUSIVE_OR],
        ['&', PREC.BITWISE_AND],
        ['==', PREC.EQUAL],
        ['!=', PREC.EQUAL],
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['<', PREC.RELATIONAL],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
      ];

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $.expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $.expression),
        ));
      }));
    },

    update_expression: $ => {
      const argument = field('argument', $.expression);
      const operator = field('operator', choice('--', '++'));
      return prec.right(PREC.UNARY, choice(
        seq(operator, argument),
        seq(argument, operator),
      ));
    },

    field_expression: $ => seq(
      prec(PREC.FIELD, seq(
        field('argument', $.expression),
        field('operator', choice('.', '->', '->*', '.*')),
      )),
      field('field', $._member_identifier),
    ),

    subscript_expression: $ => prec(PREC.SUBSCRIPT, seq(
      field('argument', $.expression),
      '[',
      field('index', $.expression),
      ']',
    )),
    
    conditional_expression: $ => prec.right(PREC.CONDITIONAL, seq(
      field('condition', $.expression),
      '?',
      optional(field('consequence', choice($.expression, $.comma_expression))),
      ':',
      field('alternative', $.expression),
    )),

    parenthesized_expression: $ => seq(
      '(',
      choice($.expression, $.comma_expression, $.compound_statement),
      ')',
    ),

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', $.expression),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq('(', commaSep(choice($.expression, $.compound_statement)), ')'),

    _classref: $ => choice(
      seq(
        optional(field('class_modifier', $.class_modifier)),
        $._class_name,
      ),
      $._gtop_class,
      $._gins_class,
      $.class_specifier,
      $.struct_specifier,
      $.union_specifier,
      $.enum_specifier,

    ),

    type_descriptor: $ => seq(
      field('type', $._classref),
      optional(field('declarator', $.abstruct_declarator)),
    ),

    cast_expression: $ => prec(PREC.CAST, seq(
      '(',
      field('type', $.type_descriptor),
      ')',
      field('argument', $.expression),
    )),

    sizeof_expression: $ => prec(PREC.SIZEOF, seq(
      'sizeof',
      choice(
        seq('(', field('type', $.type_descriptor), ')'),
        field('argument', $.expression),
      ),
    )),

    qualified_identifier: $ => choice(
      seq(
        '::',
        field('name', choice(
          $.identifier,
          $.operator_declarator,
          $.destructor_name,
        )),
      ),
      seq(
        field('scope', $._namespace_identifier),
        '::',
        field('name', choice(
          $.identifier,
          $.operator_declarator,
          $.destructor_name,
          $.qualified_identifier,
        ))
      ),
    ),

    coordinate_point: $ => seq(
      '/',
      field('x', seq(optional('-'), choice($.integer_literal, $.double_literal))),
      field('y', seq(optional('-'), choice($.integer_literal, $.double_literal))),
    ),
    
    coordinate: $ => prec.right(seq(
      seq($.coordinate_point, $.coordinate_point),
      repeat($.coordinate_point),
    )),

    // Literals

    true: _ => token(choice('TRUE', 'true')),
    false: _ => token(choice('FALSE', 'false')),
    null: _ => choice('NULL', 'nullptr'),

    integer_literal: _ => token(choice(
      /[0-9]+/,
      /0[xX][a-fA-F0-9]+/,
      /0[xX][a-fA-F0-9]+[LUlu]/,
    )),

    integer64_literal: _ => token(choice(
      /[0-9]+(LL|ll)/,
      /[0-9]+[hH]/,
      /0[xX][a-fA-F0-9]+(LL|ll)/,
      /0[xX][a-fA-F0-9]+[hH]/,
    )),

    double_literal: _ => token(choice(
      /[0-9]*\.[0-9]+([eE][\+|\-]?[0-9]+)?/,
      /[0-9]+\.[0-9]*([eE][\+|\-]?[0-9]+)?/,
      /[0-9]+([eE][\+|\-]?[0-9]+)/,
    )),

    unit_integer_literal: _ => token(
      /[0-9]+[a-zA-Z_$]+/,
    ),

    unit_double_literal: _ => token(choice(
      /[0-9]*\.[0-9]+([eE][\+|\-]?[0-9]+)?[a-zA-Z_$]+/,
      /[0-9]+\.[0-9]*([eE][\+|\-]?[0-9]+)?[a-zA-Z_$]+/,
      /[0-9]+([eE][\+|\-]?[0-9]+)[a-zA-Z_$]+/,
    )),

    char_literal: $ => seq(
      choice('L\'', '\''),
      repeat1(choice(
        $.escape_sequence,
        alias(token.immediate(/[^\n']/), $.character),
      )),
      '\'',
    ),

    concatenated_string: $ => prec.right(seq(
      seq($.string_literal, $.string_literal),
      repeat($.string_literal),
    )),

    string_literal: $ => seq(
      choice('L"', '"'),
      repeat(choice(
        alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
        $.escape_sequence,
      )),
      '"',
    ),

    escape_sequence: _ => token(prec(1, seq(
      '\\',
      choice(
        /[^xuU]/,
        /\d{2,3}/,
        /x[0-9a-fA-F]{1,4}/,
        /u[0-9a-fA-F]{4}/,
        /U[0-9a-fA-F]{8}/,
      ),
    ))),

    identifier: _ => /[a-zA-Z_\$][0-9a-zA-Z_\$]*/,
    _member_identifier: $ => choice(
      alias($.identifier, $.member_identifier),
      $.destructor_name,
    ),
    _namespace_identifier: $ => alias($.identifier, $.namespace_identifier),
    comment: _ => token(choice(
      seq('//', /(\\+(.|\r?\n)|[^\\\n])*/),
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/',
      ),
    )),
