test/corpus/expression.txt
================================================================================
Number literals
================================================================================

double a = {
  0xAC00,
  0.123,
  0xabc00ll,
  24e-5,
  58.,
  4e2,
  123.456e-67,
  2.0dd, 5wb
};

--------------------------------------------------------------------------------

(translation_unit
  (object_definition
    type: (class_name)
    declarator: (init_declarator
      declarator: (identifier)
      value: (initializer_list
        (integer_literal)
        (double_literal)
        (integer64_literal)
        (double_literal)
        (double_literal)
        (double_literal)
        (double_literal)
        (unit_double_literal)
        (unit_integer_literal)
      )
    )
  )
)

================================================================================
Identifiers
================================================================================

int main() {
  _abc;
  d_EG123;
  $f;
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (identifier)
      )
      (expression_statement
        (identifier)
      )
      (expression_statement
        (identifier)
      )
    )
  )
)

================================================================================
Common constants
================================================================================

int main() {
  true;
  false;
  NULL;

  // regression test - identifiers starting w/ these strings should tokenize correctly.
  true_value;
  false_value;
  NULL_value;
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (true))
      (expression_statement
        (false))
      (expression_statement
        (null))
      (comment)
      (expression_statement
        (identifier)
      )
      (expression_statement
        (identifier)
      )
      (expression_statement
        (identifier)
      )
    )
  )
)

================================================================================
Function calls
================================================================================

int main() {
  printf("hi! %d\n", x);
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (argument_list
            (string_literal
              (string_content)
              (escape_sequence)
            )
            (identifier)
          )
        )
      )
    )
  )
)

================================================================================
String literals
================================================================================

int main() {
  "a";
  "b" "c" "d";
  "\"hi\"";
  L"bonjour";
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (string_literal
          (string_content))
      )
      (expression_statement
        (concatenated_string
          (string_literal
            (string_content))
          (string_literal
            (string_content))
          (string_literal
            (string_content))
        )
      )
      (expression_statement
        (string_literal
          (escape_sequence)
          (string_content)
          (escape_sequence)
        )
      )
      (expression_statement
        (string_literal
          (string_content))
      )
    )
  )
)

================================================================================
Character literals
================================================================================

int main() {
  'a';
  '\0';
  '\t';
  '\'';
  L'b';
  '\x3';
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (char_literal
          (character))
      )
      (expression_statement
        (char_literal
          (escape_sequence))
      )
      (expression_statement
        (char_literal
          (escape_sequence))
      )
      (expression_statement
        (char_literal
          (escape_sequence))
      )
      (expression_statement
        (char_literal
          (character))
      )
      (expression_statement
        (char_literal
          (escape_sequence))
      )
    )
  )
)

================================================================================
Coordinate literals
================================================================================

int main() {
  ipoint p = /1 2;
  icoord c = /-1 0 /1 2;
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (object_definition
        type: (class_name)
        declarator: (init_declarator
          declarator: (identifier)
          value: (coordinate_point
            x: (integer_literal)
            y: (integer_literal)
          )
        )
      )
      (object_definition
        type: (class_name)
        declarator: (init_declarator
          declarator: (identifier)
          value: (coordinate
            (coordinate_point
              x: (integer_literal)
              y: (integer_literal)
            )
            (coordinate_point
              x: (integer_literal)
              y: (integer_literal)
            )
          )
        )
      )
    )
  )
)

================================================================================
Field access
================================================================================

int main() {
  s.data1;
  p->data2;
  q[data3];
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (field_expression
          argument: (identifier)
          field: (member_identifier)
        )
      )
      (expression_statement
        (field_expression
          argument: (identifier)
          field: (member_identifier)
        )
      )
      (expression_statement
        (subscript_expression
          argument: (identifier)
          index: (identifier)
        )
      )
    )
  )
)

================================================================================
Boolean operators
================================================================================

int main() {
  !x || !y && !z;
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (binary_expression
          left: (unary_expression
            argument: (identifier)
          )
          right: (binary_expression
            left: (unary_expression
              argument: (identifier)
            )
            right: (unary_expression
              argument: (identifier)
            )
          )
        )
      )
    )
  )
)

================================================================================
Math operators
================================================================================

int main() {
  -a / b + c * -d;
  a++ - ++b + c-- + --d;
  ++L;
  }

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (binary_expression
          left: (binary_expression
            left: (unary_expression 
              argument: (identifier)
            )
            right: (identifier)
          )
          right: (binary_expression
            left: (identifier)
            right: (unary_expression 
              argument: (identifier)
            )
          )
        )
      )
      (expression_statement
        (binary_expression
          left: (binary_expression
            left: (binary_expression
              left: (update_expression
                argument: (identifier)
              )
              right: (update_expression
                argument: (identifier)
              )
            )
            right: (update_expression
              argument: (identifier)
            )
          )
          right: (update_expression
            argument: (identifier)
          )
        )
      )
      (expression_statement
        (update_expression
          argument: (identifier)
        )
      )
    )
  )
)

================================================================================
The comma operator
================================================================================

int main() {
  i--, j--;
  (i--, j--);
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (comma_expression
          left: (update_expression
            argument: (identifier)
          )
          right: (update_expression
            argument: (identifier)
          )
        )
      )
      (expression_statement
        (parenthesized_expression
          (comma_expression
            left: (update_expression
              argument: (identifier)
            )
            right: (update_expression
              argument: (identifier)
            )
          )
        )
      )
    )
  )
)

================================================================================
Assignments
================================================================================

int main() {
  static int a = 1;
  b = *c = 2;
  d.e = 3;
  f->g = 4;
  h[i] = j;
  k += l;
  m -= o;
  n *= p;
  q /= r;
  *s++ = 1;
  (*t) = 1;
  a *= ((b!=c) ? d : e);
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (object_definition
        storage_class_specifier: (storage_class_specifier)
        type: (class_name)
        declarator: (init_declarator
          declarator: (identifier)
          value: (integer_literal)
        )
      )
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (assignment_expression
            left: (pointer_expression
              argument: (identifier)
            )
            right: (integer_literal)
          )
        )
      )
      (expression_statement
        (assignment_expression
          left: (field_expression
            argument: (identifier)
            field: (member_identifier)
          )
          right: (integer_literal)
        )
      )
      (expression_statement
        (assignment_expression
          left: (field_expression
            argument: (identifier)
            field: (member_identifier)
          )
          right: (integer_literal)
        )
      )
      (expression_statement
        (assignment_expression
          left: (subscript_expression
            argument: (identifier)
            index: (identifier)
          )
          right: (identifier)
        )
      )
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (identifier)
        )
      )
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (identifier)
        )
      )
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (identifier)
        )
      )
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (identifier)
        )
      )
      (expression_statement
        (assignment_expression
          left: (pointer_expression
            argument: (update_expression
              argument: (identifier)
            )
          )
          right: (integer_literal)
        )
      )
      (expression_statement
        (assignment_expression
          left: (parenthesized_expression
            (pointer_expression
              argument: (identifier)
            )
          )
          right: (integer_literal)
        )
      )
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (parenthesized_expression
            (conditional_expression
              condition: (parenthesized_expression
                (binary_expression
                  left: (identifier)
                  right: (identifier)
                )
              )
              consequence: (identifier)
              alternative: (identifier)
            )
          )
        )
      )
    )
  )
)

================================================================================
Pointer operations
================================================================================

int main() {
  doSomething(&x, *x);
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (argument_list
            (pointer_expression
              argument: (identifier)
            )
            (pointer_expression
              argument: (identifier)
            )
          )
        )
      )
    )
  )
)

================================================================================
Type-casts
================================================================================

int main() {
  x = (SomeType *)thing;
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (cast_expression
            type: (type_descriptor
              type: (class_name)
              declarator: (abstruct_pointer_declarator)
            )
            argument: (identifier)
          )
        )
      )
    )
  )
)

================================================================================
Sizeof expressions
================================================================================

int main() {
  sizeof x.a;
  sizeof(x.a);
  sizeof(char **);
  sizeof(char * ());
  sizeof(1) + 1;
  sizeof((1) + 1);
  sizeof(int) + 1;
  sizeof(struct foo) + sizeof(struct bar) + 1;
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (sizeof_expression
          argument: (field_expression
            argument: (identifier)
            field: (member_identifier)
          )
        )
      )
      (expression_statement
        (sizeof_expression
          argument: (parenthesized_expression
            (field_expression
              argument: (identifier)
              field: (member_identifier)
            )
          )
        )
      )
      (expression_statement
        (sizeof_expression
          type: (type_descriptor
            type: (class_name)
            declarator: (abstruct_pointer_declarator
              declarator: (abstruct_pointer_declarator)
            )
          )
        )
      )
      (expression_statement
        (sizeof_expression
          type: (type_descriptor
            type: (class_name)
            declarator: (abstruct_pointer_declarator
              declarator: (abstruct_function_declarator
                parameters: (parameter_list)
              )
            )
          )
        )
      )
      (expression_statement
        (binary_expression
          left: (sizeof_expression
            argument: (parenthesized_expression
              (integer_literal)
            )
          )
          right: (integer_literal)
        )
      )
      (expression_statement
        (sizeof_expression
          argument: (parenthesized_expression
            (binary_expression
              left: (parenthesized_expression
                (integer_literal)
              )
              right: (integer_literal)
            )
          )
        )
      )
      (expression_statement
        (binary_expression
          left: (sizeof_expression
            argument: (parenthesized_expression
              (identifier)
            )
          )
          right: (integer_literal)
        )
      )
      (expression_statement
        (binary_expression
          left: (binary_expression
            left: (sizeof_expression
              type: (type_descriptor
                struct_specifier: (struct_specifier)
                type: (class_name)
              )
            )
            right: (sizeof_expression
              type: (type_descriptor
                struct_specifier: (struct_specifier)
                type: (class_name)
              )
            )
          )
          right: (integer_literal)
        )
      )
    )
  )
)

================================================================================
Comments with escaped newlines
================================================================================

// one \
   two

--------------------------------------------------------------------------------

(translation_unit
  (comment)
)

================================================================================
Comments with escaped chars and newlines
================================================================================

// one \a \b \
   two
// one \c \d
--------------------------------------------------------------------------------

(translation_unit
  (comment)
  (comment)
)

================================================================================
Ternary
================================================================================

void f() {
  0 ? 1 : 2;
  a = 0 ? 1 : 2;
  a = val ? b = 3, 1 : 0;
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (conditional_expression
          condition: (integer_literal)
          consequence: (integer_literal)
          alternative: (integer_literal)
        )
      )
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (conditional_expression
            condition: (integer_literal)
            consequence: (integer_literal)
            alternative: (integer_literal)
          )
        )
      )
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (conditional_expression
            condition: (identifier)
            consequence: (comma_expression
              left: (assignment_expression
                left: (identifier)
                right: (integer_literal)
              )
              right: (integer_literal)
            )
            alternative: (integer_literal)
          )
        )
      )
    )
  )
)

================================================================================
Scoped function calls
================================================================================

int main() {
  abc::def("hello", "world");
}

--------------------------------------------------------------------------------

(translation_unit
  (function_definition
    type: (class_name)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list)
    )
    body: (compound_statement
      (expression_statement
        (call_expression
          function: (qualified_identifier
            scope: (namespace_identifier)
            name: (identifier)
          )
          arguments: (argument_list
            (string_literal
              (string_content)
            )
            (string_literal
              (string_content)
            )
          )
        )
      )
    )
  )
)
